[package]
name = "stayalive"
version = "0.2.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
description = "A collection of resilience patterns"
repository = "https://github.com/chridou/stayalive"
homepage = "https://github.com/chridou/stayalive"
documentation = "https://docs.rs/stayalive"
readme = "README.MD"
keywords = ["microservices", "web", "resilience", "bulkhead", "circuitbreaker"]
categories = ["web-programming"]
license = "Apache-2.0/MIT"

[dependencies]
threadpool = "1.7.0"